Assignment 1a solution, all tests passed(TODO:query null and edge test cases should be rewritten)